# tsuginote

./: .env.example  .gitignore  README.md
docs/: ceo-memo.md  financial-plan.md  kpi-framework.md  launch-plan.md  phase0-gtm-strategy.md  phase0-market-research.md  phase1-business-plan.md  phase2-requirements.md  phase3-design.md
docs/legal/: privacy-policy.md  terms-of-service.md
infra/docker/: docker-compose.yml
ops/: operations-manual.md
security/: phase6-security-audit.md
src/backend/: alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_schema.py
src/backend/app/: main.py
src/backend/app/api/: deps.py
src/backend/app/api/v1/: ai.py  ai_helpers.py  auth.py  billing.py  checklists.py  dashboard.py  documents.py  workspaces.py
src/backend/app/core/: config.py  database.py  sanitize.py  security.py
src/backend/app/models/: __init__.py  ai_log.py  checklist.py  document.py  subscription.py  user.py  workspace.py
src/backend/app/schemas/: ai.py  auth.py  billing.py  checklist.py  dashboard.py  document.py  workspace.py
src/backend/app/services/: ai_service.py  billing_service.py  email_service.py  rag_service.py
src/frontend/: package-lock.json  package.json
src/frontend/src/app/: layout.tsx
src/frontend/src/app/(protected)/: layout.tsx
src/frontend/src/app/(public)/: layout.tsx  page.tsx
src/frontend/src/components/layout/: Header.tsx  ProtectedHeader.tsx  ProtectedRoute.tsx  Sidebar.tsx
src/frontend/src/components/lp/: CtaSection.tsx  (+4 more)
src/frontend/src/lib/: api.ts  auth.ts
(+13 files in other folders)
